# strickland-cannon-coop-src

./: README.md  server.py
.github/workflows/: backend-scraper.yml  frontend-build.yml
backend/: .flake8  .gitignore  README.md  pyproject.toml  server.py
backend/strickland_cannon_coop/scripts/: __main__.py  electricity.py  mortgage.py  water.py
backend/strickland_cannon_coop/utils/: gpgjson.py
data/: electricity.json  mortgage copy.json  mortgage.json  water.json
frontend/: README.md  nuxt.config.js  package.json  tsconfig.json
frontend/components/: LineChart.vue  TabbedCharts.vue
frontend/components/electricity/: ElectrictyAverage.vue  Overall.vue  Previous.vue
frontend/components/mortgage/: Charts.vue  Stats.vue
frontend/components/water/: WaterAverage.vue  WaterOverall.vue  WaterPrevious.vue
frontend/layouts/: default.vue
frontend/pages/: electricity.vue  index.vue  mortgage.vue  water.vue
frontend/plugins/: axios.ts  lodash.ts  money.ts  rollingMean.ts
